Added navigation and a color theme.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Five O\'Clock Somewhere</string>
+    <string name="app_title">It\'s Five O\'Clock Somewhere</string>
 </resources>
