--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="its_five_oclock">It\'s five o\'clock %1$s. Would you like %2$s?</string>
     <string name="image">Drink image.</string>
     <string name="get_recipe">Get Recipe</string>
-    <string name="something_else">Something Else</string>
+    <string name="another_drink">Another Drink</string>
     <string name="image_error">Error loading image.</string>
     <string name="country_error">nowhere. It\'s not five o\'clock anywhere in the world</string>
     <string name="water">a glass of water</string>
@@ -17,4 +17,5 @@
     <string name="how_to">How to make %1$s.</string>
     <string name="ingredients">Ingredients</string>
     <string name="instructions">Instructions</string>
+    <string name="error_title">Error</string>
 </resources>
